(search) Fix handling of unneeded 404 errors on search API and make alerts smaller on mobile

--- a/src/app/styles/_alerts.scss
+++ b/src/app/styles/_alerts.scss
@@ -1,3 +1,5 @@
+@import "breakpoints";
+
 .alert {
   box-shadow: 0 0.25rem 1rem rgba(0, 0, 0, .333);
 
@@ -146,5 +148,10 @@
         border-bottom: 1px dotted var(--darkGrey);
       }
     }
+  }
+
+  @media (max-width: $xs-max) {
+    padding: .5rem .75rem;
+    font-size: .9rem;
   }
 }
